# aoc23

./: .gitignore  README.md
1_trebuchet/: dune-project  trebuchet.opam
1_trebuchet/lib/: dune  trebuchet_lib.ml  utils.ml  utils.mli
2_cube_conundrum/: dune-project  output.txt  output_power.txt
2_cube_conundrum/_build/: .db  .digest-db  log
2_cube_conundrum/_build/default/: cube.dune-package  cube.install  cube.opam
2_cube_conundrum/_build/default/lib/: cube.cma  cube.cmxa  cube.cmxs
2_cube_conundrum/_build/default/lib/.cube.objs/byte/: cube.cmi  cube.cmo  cube.cmt
2_cube_conundrum/_build/default/lib/.cube.objs/native/: cube.cmx
2_cube_conundrum/_build/default/lib/.merlin-conf/: lib-cube
2_cube_conundrum/_build/default/test/.merlin-conf/: exe-test_cube
2_cube_conundrum/_build/default/test/.test_cube.eobjs/byte/: dune__exe__Test_cube.cmi  dune__exe__Test_cube.cmti
2_cube_conundrum/_build/default/test/.test_cube.eobjs/native/: dune__exe__Test_cube.cmx
2_cube_conundrum/lib/: dune
2_cube_conundrum/test/: dune
3_gear_ratios/: dune-project  gear.opam
3_gear_ratios/_build/: .db  .digest-db  log
3_gear_ratios/lib/: dune
3_gear_ratios/test/: dune
4_scratchcards/: dune-project  scratchcards.opam
4_scratchcards/_build/: .db  .digest-db  log
4_scratchcards/lib/: dune
4_scratchcards/test/: dune
5_if_you_give_a_seed_a_fertilizer/: dune-project
5_if_you_give_a_seed_a_fertilizer/_build/: .db  .digest-db  log
6_wait_for_it/: dune-project
6_wait_for_it/_build/: .db  (+2 more)
7_camel_cards/: dune-project
day_1_trebuchet/: calc.txt  day_1_trebuchet.opam  dune-project
day_1_trebuchet/lib/: ascii.ml  day_1_trebuchet_lib.ml  dune
day_1_trebuchet/lib/extensions/: extensions.ml
(+77 files in other folders)
