(lang dune 3.12)

(name trebuchet)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Herman Gohn")

(maintainers "Herman Gohn")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name trebuchet)
 (synopsis "Solution to AoC23 day 1")
 (description "Just parses some given input data etc etc")
 (depends ocaml dune stdio)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
